# mas-installer

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: build.yml  ci.yml
src/: app_styles.rs  audio.rs  builder.rs  errors.rs  installer.rs  main.rs  static_data.rs  styles.rs  utils.rs
src/app/: builder.rs  dialog.rs  mod.rs  state.rs  styles.rs
