[package]
name = "mas-installer"
version = "0.0.1"
authors = ["Booplicate"]
description = "Custom cross-platform installer for Monika After Story"
repository = "https://github.com/Monika-After-Story/mas-installer/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "=1.3.11"
zip = "=0.6.2"
reqwest = {version="=0.11.11", features=["blocking"]}
serde_json = "=1.0.82"
tempfile = "=3.3.0"

[features]
default = ["compile_static"]

compile_icon = []
compile_license = []
compile_static = ["compile_icon", "compile_license"]
