[package]
name = "mas-installer"
version = "0.3.0"
authors = ["Booplicate"]
description = "Custom cross-platform installer for Monika After Story"
repository = "https://github.com/Monika-After-Story/mas-installer/"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "=1.3.11"
zip = "=0.6.2"
reqwest = { version = "=0.11.11", features = ["blocking"] }
serde = { version = "=1.0.143", features = ["derive"] }
serde_json = "=1.0.82"
tempfile = "=3.3.0"
rodio = { version = "=0.15.0", default-features = false, features = ["vorbis"] }
regex = "=1.6.0"
lazy_static = "=1.4.0"
webbrowser = "=0.8.0"
const_format = "=0.2.26"# This is temp until rust gets better constant fn

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.12"

[package.metadata.winres]
ProductName = "Monika After Story Installer"
FileDescription = "Installer for Monika After Story"
CompanyName = "Monika After Story Team"

[features]
default = ["include_license"]

include_license = []

[profile.release]
strip = true
